--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,13 +7,13 @@
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
-      <%= image_tag @order.image, class: 'buy-item-img' %>
+      <%= image_tag @item.image, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
-          <%= @order.describe %>
+          <%= @item.describe %>
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= @order.price.to_s(:delimited) %></p>
+          <p class='item-price-text'>¥<%= @item.price.to_s(:delimited) %></p>
           <p class='item-price-sub-text'>（税込）送料込み</p>
         </div>
       </div>
@@ -26,12 +26,14 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= @order.price.to_s(:delimited) %>
+        ¥<%= @item.price.to_s(:delimited) %>
       </p>
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+    <%= form_with( url: item_orders_path, method: :post, id: 'charge-form', class: 'transaction-form-wrap',local: true ) do |f| %>
+    <%# エラー時の表記 %>
+    <%= render 'shared/error_messages', model: @order %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -88,7 +90,7 @@
           <label class="form-text">都道府県</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.collection_select(:prefcture, Prefecture.all, :id, :name , {}, {class:"select-box", id:"prefecture"}) %>
+        <%= f.collection_select(:prefecture, Prefecture.all, :id, :name , {}, {class:"select-box", id:"prefecture"}) %>
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
